--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,5 +39,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.4.0'
 
     implementation 'com.google.code.gson:gson:2.8.4'
-
+    implementation 'com.android.support:recyclerview-v7:29.0.0'
 }
